fixed dark mode in some components, added modal for product details

--- a/src/App.css
+++ b/src/App.css
@@ -454,6 +454,34 @@ body {
 
 /* order page */
 
+.rotate-inv {
+  animation: flip-vertical-left 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+}
+
+@keyframes flip-vertical-left {
+  0% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+.rotate {
+  animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+}
+
+@keyframes flip-vertical-right {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
 .filterHeader {
   background-color: #00796b;
   z-index: 1;
